--- a/DisenioTP/.classpath
+++ b/DisenioTP/.classpath
@@ -5,6 +5,6 @@
 	<classpathentry exported="true" kind="var" path="M2_REPO/junit/junit/4.12/junit-4.12.jar"/>
 	<classpathentry exported="true" kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_91"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/sebastian/Desktop/disenio/DiseDeSistemas/DisenioTP/sqljdbc4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Guido/workspace/DiseDeSistemas/DisenioTP/sqljdbc4.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
